--- a/currency/requirements.txt
+++ b/currency/requirements.txt
@@ -1,2 +1,27 @@
+attrs==20.3.0
+click==7.1.2
+colorama==0.4.4
+docopt==0.6.2
+flake8==3.8.4
 Flask==1.1.2
 Flask-Cors==3.0.8
+importlib-metadata==3.4.0
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+packaging==20.8
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==6.2.2
+pytest-watch==4.2.0
+six==1.15.0
+toml==0.10.2
+typing-extensions==3.7.4.3
+watchdog==1.0.2
+Werkzeug==1.0.1
+zipp==3.4.0
