--- a/history/package.json
+++ b/history/package.json
@@ -4,11 +4,16 @@
   "description": "A backend data service that returns historical data of currency exchange",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "author": "Marek Czernek <mczernek@redhat.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0",
+    "jest": "^26.6.3"
   }
 }
