--- a/jenkins/jenkins-agent-template.yml
+++ b/jenkins/jenkins-agent-template.yml
@@ -56,8 +56,8 @@ parameters:
 - name: SOURCE_REPOSITORY_REF
   displayName: Git Reference
   description: Set this to a branch name, tag or other ref of your repository if you
-    are not using the default (master) branch.
-  value: master
+    are not using the default (main) branch.
+  value: main
 - name: SOURCE_CONTEXT_DIR
   displayName: Git Context Directory
   description: Set this to the directory where the build information is (e.g. Dockerfile)
