enable s2i for exchange

--- a/exchange/pom.xml
+++ b/exchange/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
+    <groups>unit</groups>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
@@ -17,7 +18,6 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.11.1.Final</quarkus.platform.version>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
-    <groups>unit</groups>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -57,6 +57,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-openshift</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -87,22 +91,8 @@
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
-          <!-- <excludedGroups>integration</excludedGroups> -->
           <groups>${groups}</groups>
         </configuration>
-        <!-- <executions>
-          <execution>
-              <id>integration-tests</id>
-              <phase>integration-test</phase>
-              <goals>
-                  <goal>test</goal>
-              </goals>
-              <configuration>
-                  <excludedGroups>!integration</excludedGroups>
-                  <groups>integration</groups>
-              </configuration>
-          </execution>
-        </executions> -->
       </plugin>
     </plugins>
   </build>
