--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "@types/jest": "^26.0.9",
+        "cypress": "^6.4.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-config-react-app": "^5.2.1",
         "eslint-plugin-prettier": "^3.1.4",
