--- a/jenkins/cypress/Containerfile
+++ b/jenkins/cypress/Containerfile
@@ -1,48 +1,19 @@
-FROM registry.redhat.io/openshift4/ose-jenkins-agent-base
+FROM openshift/jenkins-slave-base-centos7
 
-# Taken from: https://github.com/cypress-io/cypress-docker-images/blob/master/base/centos7-12.4.0/Dockerfile
-
-# To find which package provides missing dependency, for example libXss.so
-#   yum whatprovides libXss*
-# and then install displayed answer like
-#   yum install -y libXScrnSaver*
-
-
-# install commands taken from
-# https://tecadmin.net/install-latest-nodejs-and-npm-on-centos/
-RUN yum install -y gcc-c++ make
+# Add Node.js repo
+RUN yum install -y --setopt=tsflags=nodocs gcc-c++ make
 RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash -
 
-# Install Node
-RUN yum install -y nodejs
-RUN node -v
-RUN npm -v
+# Reference: https://github.com/cypress-io/cypress-docker-images/blob/master/base/centos7-12.4.0/Dockerfile
+RUN yum install -y --setopt=tsflags=nodocs \
+        nodejs xorg-x11-server-Xvfb xorg-x11-xauth \
+        gtk2-2.24* gtk3-3.22* libXtst* libXScrnSaver* \
+        GConf2* alsa-lib* git* && \
+    yum clean all -y && \
+    rm -rf /var/cache/yum && \
+    npm install --unsafe-perm -g npm-audit-html npm-audit-ci-wrapper sonar-scanner || cat /home/jenkins/.npm/_logs/*-debug.log && \
+    chown root:root /home/jenkins -R && \
+    chmod 775 /home/jenkins/.config -R && \
+    chmod 775 /home/jenkins/.npm -R
 
-# Install dependencies
-RUN yum install -y xorg-x11-server-Xvfb
-RUN yum install -y xorg-x11-xauth
-# note:
-#   Gtk2 for Cypress < 3.3.0
-#   Gtk3 for Cypress >= 3.3.0
-RUN yum install -y gtk2-2.24*
-RUN yum install -y gtk3-3.22*
-RUN yum install -y libXtst*
-# provides libXss
-RUN yum install -y libXScrnSaver*
-# provides libgconf-2
-RUN yum install -y GConf2*
-# provides libasound
-RUN yum install -y alsa-lib*
-
-RUN npm install yarn -g
-
-# there is some dependency I cannot figure out missing
-# which gets installed when installing "git*"
-RUN yum install -y git*
-
-# versions of local tools
-RUN echo  " node version:    $(node -v) \n" \
-  "npm version:     $(npm -v) \n" \
-  "yarn version:    $(yarn -v) \n" \
-  "centOS version:  $(cat /etc/centos-release) \n" \
-  "user:            $(whoami) \n"
+USER 1001
