add npm script for funct tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "test": "react-scripts test",
         "test:coverage": "yarn test . --coverage --collectCoverageFrom=\"src/{components,services,pages}/**/*.ts{,x}\"",
         "test:ci": "CI=true yarn test:coverage",
+        "test:functional": "cypress run",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
         "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
         "format": "prettier . --write"
