--- a/jenkins/cypress/Containerfile
+++ b/jenkins/cypress/Containerfile
@@ -1,4 +1,4 @@
-FROM registry.redhat.io/openshift4/ose-jenkins-agent-base
+FROM registry.redhat.io/openshift4/ose-jenkins-agent-base:v4.6
 
 # Add Node.js repo
 COPY CentOS.repo /etc/yum.repos.d/
@@ -7,9 +7,7 @@ RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash -
 
 # Reference: https://github.com/cypress-io/cypress-docker-images/blob/master/base/centos7-12.4.0/Dockerfile
 RUN yum install -y --disableplugin=subscription-manager --setopt=tsflags=nodocs \
-        nodejs xorg-x11-server-Xvfb xorg-x11-xauth \
-        gtk2-2.24* gtk3-3.22* libXtst* libXScrnSaver* \
-        GConf2* alsa-lib* git* && \
+        nodejs xorg-x11-server-Xvfb gtk2-devel gtk3-devel libnotify-devel GConf2 nss libXScrnSaver alsa-lib && \
     yum clean all -y && \
     rm -rf /var/cache/yum && \
     npm install --unsafe-perm -g npm-audit-html npm-audit-ci-wrapper sonar-scanner || cat /home/jenkins/.npm/_logs/*-debug.log && \
