--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -14,7 +14,11 @@
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly",
-        "process": "readonly"
+        "process": "readonly",
+        "context": "readonly",
+        "beforeEach": "readonly",
+        "it": "readonly",
+        "cy": "readonly"
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
