--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,15 @@
     "scripts": {
         "start": "react-scripts start",
         "start:crc": "REACT_APP_GW_ENDPOINT=http://exchange-exchange-app.apps-crc.testing react-scripts start",
-        "build": "react-scripts build",
+        "start:services": "./scripts/start-local-services",
+        "build": "npm run build:prod",
+        "build:stage": "REACT_APP_GW_ENDPOINT=http://exchange-rht-jramirez-exchange-stage.apps.na45-stage.dev.nextcle.com/ react-scripts build",
+        "build:prod": "REACT_APP_GW_ENDPOINT=http://exchange-rht-jramirez-exchange-stage.apps.na45-prod.dev.nextcle.com/ react-scripts build",
         "test": "react-scripts test",
         "test:coverage": "yarn test . --coverage --collectCoverageFrom=\"src/{components,services,pages}/**/*.ts{,x}\"",
         "test:ci": "CI=true yarn test:coverage",
         "test:functional": "cypress run",
+        "test:functional:open": "cypress open",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
         "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
         "format": "prettier . --write"
