--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,7 @@
         "start": "react-scripts start",
         "start:crc": "REACT_APP_GW_ENDPOINT=http://exchange-exchange-app.apps-crc.testing react-scripts start",
         "start:services": "./scripts/start-local-services",
-        "build": "npm run build:prod",
-        "build:stage": "REACT_APP_GW_ENDPOINT=http://exchange-rht-jramirez-exchange-stage.apps.na45-stage.dev.nextcle.com/ react-scripts build",
-        "build:prod": "REACT_APP_GW_ENDPOINT=http://exchange-rht-jramirez-exchange-stage.apps.na45-prod.dev.nextcle.com/ react-scripts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "test:coverage": "yarn test . --coverage --collectCoverageFrom=\"src/{components,services,pages}/**/*.ts{,x}\"",
         "test:ci": "CI=true yarn test:coverage",
