improve history service

--- a/history/.eslintrc
+++ b/history/.eslintrc
@@ -10,7 +10,10 @@
     },
     "globals": {
         "test": false,
-        "expect": false
+        "expect": false,
+        "describe": false,
+        "afterAll": false,
+        "beforeAll": false
     },
     "rules": {
         "indent": [
