--- a/history/package.json
+++ b/history/package.json
@@ -4,7 +4,11 @@
   "description": "A backend data service that returns historical data of currency exchange",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "start": "node app",
+    "test": "jest tests/unit/**/*.test.js --watchAll",
+    "test:ci": "jest tests/unit/**/*.test.js",
+    "test:integration": "PORT=8762 start-server-and-test start 8762 jest:integration",
+    "jest:integration": "jest tests/integration",
     "lint": "eslint ."
   },
   "author": "Marek Czernek <mczernek@redhat.com>",
@@ -13,7 +17,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "eslint": "^7.19.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "start-server-and-test": "^1.12.0"
   }
 }
