--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,8 @@
         "start:services": "./scripts/start-local-services",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "test:coverage": "yarn test . --coverage --collectCoverageFrom=\"src/{components,services,pages}/**/*.ts{,x}\"",
-        "test:ci": "CI=true yarn test:coverage",
+        "test:coverage": "react-scripts test --coverage --collectCoverageFrom=\"src/{components,services,pages}/**/*.ts{,x}\"",
+        "test:ci": "CI=true npm run test:coverage",
         "test:functional": "cypress run",
         "test:functional:open": "cypress open",
         "lint": "eslint --ext .js,.jsx,.ts,.tsx src cypress/functional",
