update exchange tests

--- a/exchange/src/main/resources/application.properties
+++ b/exchange/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 # Configuration file
-com.redhat.restclient.ExchangeService/mp-rest/url=http://${HISTORY_SERVICE:history:8080}
-com.redhat.restclient.ExchangeService/mp-rest/scope=javax.inject.Singleton
-com.redhat.restclient.CurrencyService/mp-rest/url=http://${CURRENCY_SERVICE:currency:5000}
-com.redhat.restclient.CurrencyService/mp-rest/scope=javax.inject.Singleton
-com.redhat.restclient.NewsService/mp-rest/url=http://${NEWS_SERVICE:news:5000}/news/finance
-com.redhat.restclient.NewsService/mp-rest/scope=javax.inject.Singleton
+com.redhat.restclient.services.HistoryService/mp-rest/url=http://${HISTORY_SERVICE:history:8080}
+com.redhat.restclient.services.HistoryService/mp-rest/scope=javax.inject.Singleton
+com.redhat.restclient.services.CurrencyService/mp-rest/url=http://${CURRENCY_SERVICE:currency:5000}
+com.redhat.restclient.services.CurrencyService/mp-rest/scope=javax.inject.Singleton
 quarkus.http.port=8080
 
