--- a/currency/requirements.txt
+++ b/currency/requirements.txt
@@ -1,6 +1,7 @@
 attrs==20.3.0
 click==7.1.2
 colorama==0.4.4
+coverage==5.4
 docopt==0.6.2
 flake8==3.8.4
 Flask==1.1.2
@@ -18,6 +19,7 @@ pycodestyle==2.6.0
 pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==6.2.2
+pytest-cov==2.11.1
 pytest-watch==4.2.0
 six==1.15.0
 toml==0.10.2
