--- a/jenkins/cypress/Containerfile
+++ b/jenkins/cypress/Containerfile
@@ -6,7 +6,7 @@ RUN yum install -y --setopt=tsflags=nodocs gcc-c++ make
 RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash -
 
 # Reference: https://github.com/cypress-io/cypress-docker-images/blob/master/base/centos7-12.4.0/Dockerfile
-RUN yum install -y --disableplugin=subscription-manager --setopt=tsflags=nodocs \
+RUN yum $DISABLE_REPOS install -y --disableplugin=subscription-manager --setopt=tsflags=nodocs --disablerepo='rhel-*' \
         nodejs xorg-x11-server-Xvfb gtk2-devel gtk3-devel libnotify-devel GConf2 nss libXScrnSaver alsa-lib && \
     yum clean all -y && \
     rm -rf /var/cache/yum && \
